Fixes registration form styles. Align all the things!

--- a/source/assets/stylesheets/_global.scss
+++ b/source/assets/stylesheets/_global.scss
@@ -34,11 +34,11 @@ section {
 }
 
 .has-padding-top {
-  padding-bottom: $base-spacing;
+  padding-top: $base-spacing;
 }
 .has-padding-top-bottom {
-  @extend .has-padding-bottom;
-  @extend .has-padding-top;
+  padding-bottom: $base-spacing;
+  padding-top: $base-spacing;
 }
 
 .fills-parent {
