--- a/source/assets/stylesheets/base/_buttons.scss
+++ b/source/assets/stylesheets/base/_buttons.scss
@@ -11,13 +11,14 @@ button {
   font-family: $strong-font-family;
   font-size: $base-font-size;
   font-weight: $strong-font-weight;
+  height: 2.78em;
   line-height: 1;
   padding: ($small-spacing / 1.2) $base-spacing;
   text-decoration: none;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba($dark-gray, 0.5);
   user-select: none;
-  vertical-align: bottom;
+  vertical-align: middle;
   white-space: nowrap;
 
   &:hover,
